# CryptoMail

./: .gitignore  Anchor.toml  Cargo.toml  README.md
programs/crypto_mail/: Cargo.toml
programs/crypto_mail/src/: errors.rs  lib.rs
programs/crypto_mail/src/instructions/: init_crypto_mail.rs  mod.rs  send_mail.rs
programs/crypto_mail/src/state/: accounts.rs
programs/crypto_mail/src/utils/: constants.rs
tests/: init_mail.ts  send_mail.ts
