[package]
name = "crypto_mail"
version = "1.0.0"
description = "crypto_mail"
edition = "2021"
authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_mail"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
ahash = "=0.8.6"